hello_world/build/log/idf_py_stdout_output_13217
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/gomadoufu/ghq/github.com/gomadoufu/sample-esp-idf/hello_world/build/bootloader/esp-idf/esptool_py && /Users/gomadoufu/.espressif/python_env/idf5.5_py3.13_env/bin/python /Users/gomadoufu/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/gomadoufu/ghq/github.com/gomadoufu/sample-esp-idf/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
/Users/gomadoufu/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/gomadoufu/ghq/github.com/gomadoufu/sample-esp-idf/hello_world/build/config -I/Users/gomadoufu/esp/esp-idf/components/newlib/platform_include -I/Users/gomadoufu/esp/esp-idf/components/freertos/config/include -I/Users/gomadoufu/esp/esp-idf/components/freertos/config/include/freertos -I/Users/gomadoufu/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/gomadoufu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/gomadoufu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/gomadoufu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/gomadoufu/esp/esp-idf/components/freertos/esp_additions/include -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/include -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/Users/gomadoufu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/Users/gomadoufu/esp/esp-idf/components/heap/include -I/Users/gomadoufu/esp/esp-idf/components/heap/tlsf -I/Users/gomadoufu/esp/esp-idf/components/log/include -I/Users/gomadoufu/esp/esp-idf/components/soc/include -I/Users/gomadoufu/esp/esp-idf/components/soc/esp32s3 -I/Users/gomadoufu/esp/esp-idf/components/soc/esp32s3/include -I/Users/gomadoufu/esp/esp-idf/components/soc/esp32s3/register -I/Users/gomadoufu/esp/esp-idf/components/hal/platform_port/include -I/Users/gomadoufu/esp/esp-idf/components/hal/esp32s3/include -I/Users/gomadoufu/esp/esp-idf/components/hal/include -I/Users/gomadoufu/esp/esp-idf/components/esp_rom/include -I/Users/gomadoufu/esp/esp-idf/components/esp_rom/esp32s3/include -I/Users/gomadoufu/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/gomadoufu/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/gomadoufu/esp/esp-idf/components/esp_common/include -I/Users/gomadoufu/esp/esp-idf/components/esp_system/include -I/Users/gomadoufu/esp/esp-idf/components/esp_system/port/soc -I/Users/gomadoufu/esp/esp-idf/components/esp_system/port/include/private -I/Users/gomadoufu/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/gomadoufu/esp/esp-idf/components/xtensa/include -I/Users/gomadoufu/esp/esp-idf/components/xtensa/deprecated_include -I/Users/gomadoufu/esp/esp-idf/components/spi_flash/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/gomadoufu/ghq/github.com/gomadoufu/sample-esp-idf/hello_world=. -fmacro-prefix-map=/Users/gomadoufu/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -c /Users/gomadoufu/ghq/github.com/gomadoufu/sample-esp-idf/hello_world/main/hello_world_main.c
/Users/gomadoufu/ghq/github.com/gomadoufu/sample-esp-idf/hello_world/main/hello_world_main.c: In function 'app_main':
/Users/gomadoufu/ghq/github.com/gomadoufu/sample-esp-idf/hello_world/main/hello_world_main.c:24:3: error: 'std' undeclared (first use in this function)
   24 |   std::bitset(chip_info.features);
      |   ^~~
/Users/gomadoufu/ghq/github.com/gomadoufu/sample-esp-idf/hello_world/main/hello_world_main.c:24:3: note: each undeclared identifier is reported only once for each function it appears in
/Users/gomadoufu/ghq/github.com/gomadoufu/sample-esp-idf/hello_world/main/hello_world_main.c:24:6: error: expected ';' before '::' token
   24 |   std::bitset(chip_info.features);
      |      ^~
      |      ;
ninja: build stopped: subcommand failed.
